sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:13: error: not found: value Valeur
       Valeur(i-n, memoire)
       ^